Подключение к БД работает